<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="copyright_notice">© 2011 Barleysoft</string>
    <string name="sounds_summary">Enable chess clock sounds</string>
    <string name="time_control">Time Control</string>
    <string name="delay_time_summary">Delay for each players in seconds</string>
    <string name="delay_time">Delay Time</string>
    <string name="delay_mode_summary">The method of time delay to employ</string>
    <string name="delay_mode">Delay Mode</string>
    <string name="duration_summary">Time for each player in minutes</string>
    <string name="flip_to_pause_summary">Pause clock when flipped face-down</string>
    <string name="shake_to_reset_summary">Reset clock when shake is detected</string>
    <string name="motion_detection">Motion Detection</string>
    <string name="time_pressure_warning_summary">Sound an alert when player is under time pressure</string>
    <string name="preferences">Preferences</string>
	<string name="settings">Settings</string>
	<string name="pause">Pause</string>
	<string name="reset">Reset</string>
	<string name="app_name">Blitzn</string>
	<string name="duration">Duration</string>
	<string name="delay">Delay</string>
	<string name="clock_font">fonts/lcd_mono_normal.ttf</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="quit">Quit</string>
	<string name="leave_in_progress">Abandon game in progress?</string>
	<string name="paused">Paused</string>
	<string name="intro_title">Blitzn Hints</string>
	<string name="intro_text">
		<li>Pick from common game lengths, including Bullet and Blitz</li>
		\n\n
		<li>Supports Fischer After Delay</li>
		\n\n
		<li>Flip the phone onto its face to pause</li>
		\n\n
		<li>Shake the phone to reset the clock</li>
	</string>
	<string name="ok">OK</string>
	<string name="shake_to_reset">Shake to Reset</string>
	<string name="flip_to_pause">Flip to Pause</string>
	<string name="sounds">Sounds</string>
<string name="time_pressure_warning">Time Pressure Warning</string>
<string name="clock_clicks">Clock Clicks</string>
<string name="clock_clicks_summary">Enables clock clicking sound for each move</string>
<string name="about">About</string>
<string name="about_dialog_text">Checkout the latest news from Barleysoft at http://barleysoft.com</string>
</resources>
